<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clock Time, Day &amp; Month - Kids</string>
    <string name="ads_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="play">Play</string>
    <string name="selecttime">Select The Correct Time</string>
    <string name="timediff">Find The Time Difference</string>
    <string name="timeadd">Add To The Time</string>
    <string name="main_menu">Main Menu</string>
    <string name="exit">Exit</string>
    <string name="more_games">More Kids Games</string>
    <string name="preferences">Settings</string>
    <string name="pref_general">General Preferences</string>
    <string name="pref_clock">Clock Settings</string>
    <string name="pref_clockdial">Set the Clock Dial</string>
    <string name="pref_timeselect">Settings for Select Time</string>
    <string name="pref_timediff">Settings For Find Difference</string>
    <string name="pref_timeadd">Settings For Add Time</string>
    <string name="pref_dmday">Display Mode For Weekdays</string>
    <string name="pref_dmmon">Display Mode For Months</string>
    <string name="pref_itemtext">Item Text All CAPS</string>
    <string name="pref_dm_summary">How the names should be displayed.</string>
    <string name="quiz_mode">Quiz Mode</string>
    <string name="quiz_mode_summary">In Quiz mode for Days, Months and Numbers sounds are not played.</string>
    <string name="random_quiz_mode">Random in Quiz mode</string>
    <string name="random_quiz_mode_summary">Applicable in quiz mode, items is not shown in order.</string>
    <string name="enable_shake">Enable Shake</string>
    <string name="enable_shake_summary">Enable shake effects</string>
    <string name="cd_next">Next</string>
    <string name="cd_prev">Previous</string>
    <string name="cd_img">Image</string>
    <string name="msg_nonet_title">No Internet Connection</string>
    <string name="msg_nonet_content">Please make sure your device is connected to either WiFi or your Mobile Network and try again.</string>
    <string name="btn_ok">OK</string>
    <string name="msg_exit_title">Exit Kids Clock Time, Day &amp; Month?</string>
    <string name="msg_exit_content">Do you want to exit Clock Time, Day &amp; Month?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
</resources>
