<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="bottom" android:id="@+id/animals" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0px" android:src="@drawable/animals" android:contentDescription="@string/cd_img" />
    <ImageView android:id="@+id/clouds" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/clouds" android:scaleType="centerInside" android:contentDescription="@string/cd_img"/>
    <LinearLayout android:layout_gravity="bottom" android:id="@+id/grass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" />
    <LinearLayout android:id="@+id/itemcollection" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" android:orientation="horizontal">
    </LinearLayout>
    <ImageView android:layout_gravity="bottom|left|center" android:id="@+id/prev" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_left" android:contentDescription="@string/cd_prev" />
    <ImageView android:layout_gravity="bottom|right|center" android:id="@+id/next" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_right" android:contentDescription="@string/cd_next" />
	<com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_gravity="bottom"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="@string/ads_id"
                         ads:adSize="SMART_BANNER"/> 	
</FrameLayout>