<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root" android:layout_width="fill_parent" android:layout_height="fill_parent">
   	<LinearLayout android:gravity="top|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="#ff0065b3" android:id="@+id/task" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeadd" />
        </LinearLayout>
        <LinearLayout android:id="@+id/clock_container" android:layout_width="0.0dip" android:layout_height="0.0dip" android:orientation="horizontal">
			<com.ui.FancyClock
		    android:id="@+id/fancyclock"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1" />
            <TextView android:gravity="center" android:layout_weight="1" android:textStyle="bold" android:textColor="#ffffff" android:id="@+id/timediff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/timediff" />
        </LinearLayout>
        <include layout="@layout/answers" />
   	</LinearLayout>
	<com.google.android.gms.ads.AdView android:id="@+id/adView"
		android:layout_gravity="bottom"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    ads:adUnitId="@string/ads_id"
	    ads:adSize="SMART_BANNER"/> 
</FrameLayout>